--- a/Chromo.ui
+++ b/Chromo.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Хромограмма</string>
+   <string>Chromogram</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -22,7 +22,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Хромограмма:</string>
+      <string>Chromogram:</string>
      </property>
     </widget>
    </item>
